- rename IPipelineState -> IPipeline
- rename IDevice::createRayTracingPipelineState -> IDevice::createRayTracingPipeline
- rename IDevice::createComputePipelineState -> IDevice::createComputePipeline
- rename IDevice::createGraphicsPipelineState -> IDevice::createRenderPipeline
- rename RayTracingPipelineStateDesc -> RayTracingPipelineDesc
- rename ComputePipelineStateDesc -> ComputePipelineDesc
- rename GraphicsPipelineStateDesc -> RenderPipelineDesc
- remove SampleDesc and instead add sampleCount and sampleQuality to TextureDesc
- rename ISamplerState -> ISampler
- rename ISamplerState::Desc -> SamlerDesc
- rename BufferDesc::sizeInBytes -> size
- replace IResource::Type with TextureType, buffers don't have a type
- remove nested structs from IBuffer & ITexture
- rename ITexture::Desc -> TextureDesc
- rename IBuffer::Desc -> BufferDesc
- rename ITextureResource -> ITexture
- rename IDevice::createTextureResource -> IDevice::createTexture
- rename IBufferResource -> IBuffer
- rename IDevice::createBufferResource -> IDevice::createBuffer