@@ -561,9 +561,6 @@ class IResource : public ISlangUnknown
 public:
     virtual SLANG_NO_THROW Result SLANG_MCALL getNativeResourceHandle(InteropHandle* outHandle) = 0;
     virtual SLANG_NO_THROW Result SLANG_MCALL getSharedHandle(InteropHandle* outHandle) = 0;
-
-    virtual SLANG_NO_THROW Result SLANG_MCALL setDebugName(const char* name) = 0;
-    virtual SLANG_NO_THROW const char* SLANG_MCALL getDebugName() = 0;
 };
 
 struct MemoryRange
@@ -589,6 +586,9 @@ struct BufferDesc
 
     InteropHandle existingHandle = {};
     bool isShared = false;
+
+    /// The name of the buffer for debugging purposes.
+    const char* label = nullptr;
 };
 
 class IBuffer : public IResource
@@ -748,6 +748,9 @@ struct TextureDesc
     int sampleQuality = 0;
 
     ClearValue* optimalClearValue = nullptr;
+
+    /// The name of the texture for debugging purposes.
+    const char* label = nullptr;
 };
 
 class ITexture : public IResource
