@@ -77,11 +77,4 @@ Result BufferImpl::unmap(MemoryRange* writtenRange)
     return SLANG_OK;
 }
 
-Result BufferImpl::setDebugName(const char* name)
-{
-    Parent::setDebugName(name);
-    m_resource.setDebugName(name);
-    return SLANG_OK;
-}
-
 } // namespace rhi::d3d12
