@@ -27,8 +27,6 @@ public:
     virtual SLANG_NO_THROW Result SLANG_MCALL map(MemoryRange* rangeToRead, void** outPointer) override;
 
     virtual SLANG_NO_THROW Result SLANG_MCALL unmap(MemoryRange* writtenRange) override;
-
-    virtual SLANG_NO_THROW Result SLANG_MCALL setDebugName(const char* name) override;
 };
 
 } // namespace rhi::d3d12
